--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Malayali StoryBot</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="card">
     <div class="icon">🤖</div>
-    <h1 class="title">Malayali Funny StoryBot</h1>
+    <h1 class="title">Malayali StoryBot</h1>
+
+    <input
+      type="text"
+      id="nameInput"
+      placeholder="Enter your name (optional)"
+      class="name-input"
+    />
 
     <div class="story" id="story-box">
-      <p class="placeholder">Click below to hear a Malayalam story 😄</p>
+      <p class="placeholder">Click below to hear a theri Malayalam story 😄</p>
     </div>
 
     <div class="buttons">
